Prevent gallery module from overflowing window vertically

--- a/modules/galerie/index.scss
+++ b/modules/galerie/index.scss
@@ -6,6 +6,11 @@
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: nowrap;
+    max-height: unset;
+
+    @include breakpoint-up('medium') {
+      max-height: 90vh;
+    }
 
     &_container {
       width: 100%;
